--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <a href="#" class="btn">Launch Live Preview</a>
     </div>
     <div class="action-image">
-      <img src="/Assets/wc-mini.png" alt="Webflow Conf Preview"/>
+      <img src="assets/wc-mini.png" alt="Webflow Conf Preview"/>
     </div>
   </section>
 
@@ -56,11 +56,11 @@
     <div class="testimonial-container">
       
       <div class="testimonial-card">
-        <div class="stars"><img src="Assets/icon-star.png"></div>
+        <div class="stars"><img src="assets/icon-star.png"></div>
         <h3>Loved by Designers</h3>
         <p>This template instantly leveled up our presence.” – Studio Vertex</p>
         <div class="reviewer-info">
-          <img src="Assets/avatar.png" alt="avatar.pic">
+          <img src="assets/avatar.png" alt="avatar.pic">
           <div>
             <p class="reviewer-name">Reviewer name</p>
             <p class="review-date">Date</p>
@@ -69,11 +69,11 @@
       </div>
 
       <div class="testimonial-card">
-        <div class="stars"><img src="Assets/icon-star.png"></div>
+        <div class="stars"><img src="assets/icon-star.png"></div>
         <h3>Loved by Designers</h3>
         <p>This template instantly leveled up our presence.” – Studio Vertex</p>
         <div class="reviewer-info">
-          <img src="Assets/avatar.png" alt="avatar.pic">
+          <img src="assets/avatar.png" alt="avatar.pic">
           <div>
             <p class="reviewer-name">Reviewer name</p>
             <p class="review-date">Date</p>
@@ -82,11 +82,11 @@
       </div>
 
       <div class="testimonial-card">
-        <div class="stars"><img src="Assets/icon-star.png"></div>
+        <div class="stars"><img src="assets/icon-star.png"></div>
         <h3>Loved by Designers</h3>
         <p>This template instantly leveled up our presence.” – Studio Vertex</p>
         <div class="reviewer-info">
-          <img src="Assets/avatar.png" alt="avatar.pic">
+          <img src="assets/avatar.png" alt="avatar.pic">
           <div>
             <p class="reviewer-name">Reviewer name</p>
             <p class="review-date">Date</p>
