--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
       <a href="#" class="btn">Launch Live Preview</a>
     </div>
     <div class="action-image">
-      <img src="assets/wc-mini.png" alt="Webflow Conf Preview"/>
+    
+      <img src="assets/wc-mini.png" alt="Webflow" >
     </div>
   </section>
 
