--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </div>
     <div class="action-image">
     
-      <img src="./assets/wc-mini.png" alt="Webflow" >
+      <img src="./wc-mini.png" alt="Webflow" >
     </div>
   </section>
 
@@ -57,11 +57,11 @@
     <div class="testimonial-container">
       
       <div class="testimonial-card">
-        <div class="stars"><img src="./assets/icon-star.png"></div>
+        <div class="stars"><img src="./icon-star.png"></div>
         <h3>Loved by Designers</h3>
         <p>This template instantly leveled up our presence.” – Studio Vertex</p>
         <div class="reviewer-info">
-          <img src="./assets/avatar.png" alt="avatar.pic">
+          <img src="./avatar.png" alt="avatar.pic">
           <div>
             <p class="reviewer-name">Reviewer name</p>
             <p class="review-date">Date</p>
@@ -70,11 +70,11 @@
       </div>
 
       <div class="testimonial-card">
-        <div class="stars"><img src="./assets/icon-star.png"></div>
+        <div class="stars"><img src="./icon-star.png"></div>
         <h3>Loved by Designers</h3>
         <p>This template instantly leveled up our presence.” – Studio Vertex</p>
         <div class="reviewer-info">
-          <img src="./assets/avatar.png" alt="avatar.pic">
+          <img src="./avatar.png" alt="avatar.pic">
           <div>
             <p class="reviewer-name">Reviewer name</p>
             <p class="review-date">Date</p>
@@ -83,11 +83,11 @@
       </div>
 
       <div class="testimonial-card">
-        <div class="stars"><img src="./assets/icon-star.png"></div>
+        <div class="stars"><img src="./icon-star.png"></div>
         <h3>Loved by Designers</h3>
         <p>This template instantly leveled up our presence.” – Studio Vertex</p>
         <div class="reviewer-info">
-          <img src="./assets/avatar.png" alt="avatar.pic">
+          <img src="./avatar.png" alt="avatar.pic">
           <div>
             <p class="reviewer-name">Reviewer name</p>
             <p class="review-date">Date</p>
